# mem-syn

./: .gitignore  Cargo.toml  README.md  test.json  test1.json  test2.json  test2.mem  test3.json
examples/: test1.mem  test2.json  test3.mem
src/: main.rs  solver.rs  structures.rs
src/dsl/: ast.rs  mod.rs  syntax.pest  trace.rs
