[package]
name = "mem-syn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.3"
pest_consume = "1.1.1"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
argh = "0.1.6"
